<resources>
    <string name="app_name">Dialect</string>
    <string name="next">Продолжить</string>
    <string name="cancellation">Отмена</string>


    // login and reg
    <string name="createAcс">Создать аккаунт</string>
    <string name="login">войти</string>

    <string name="code">Введите код</string>
    <string name="codeToSms">Мы отправились вам sms с кодом на ваш номер телефона</string>
    <string name="codeFromSms">введите код с sms</string>
    <string name="phoneNumberFromUser">введите номер телефона</string>

    <string name="CreateProfile">Создайте профиль</string>
    <string name="enterName">введите имя</string>
    <string name="enterSecondName">введите фамилию</string>
    <string name="codeError">проблема с кодом</string>


    // Toolbar
    <string name="MyProfile">Мой профиль</string>
    <string name="secondInBar">архив?</string>
    <string name="CreateGroup">Создать группу</string>
    <string name="createChat">Создать чат</string>
    <string name="contacts">Контакты</string>
    <string name="calls">Звонки</string>
    <string name="favourites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="phoneError">"проблема с номером: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing">testing</string>
    <string name="setting_label_phone_number">нажмите, чтобы изменить номер телефона</string>
    <string name="setting_label_login">Имя пользователя</string>
    <string name="setting_bio_about_you">О себе</string>
    <string name="setting_menu_change_photo">изменить фотографию</string>
    <string name="setting_menu_exit">выход</string>
    <string name="setting_menu_change_info">изменить информацию</string>
    <string name="setting_hint_input_name">имя</string>
    <string name="setting_hit_input_second_name">фамилия</string>
    <string name="username_hint">имя пользователя</string>
    <string name="setting_menu_change_background">сменить фон профилья</string>
    <string name="friends">Друзья</string>


</resources>