<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#111828"
    tools:context=".reg_or_log">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#a672df"
        app:layout_constraintVertical_bias="0.07" />


    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAcс"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="#49454f"
        android:layout_gravity="center"
        android:hint="@string/phoneNumberFromUser" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/next" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:text="@string/login" />

</LinearLayout>